--- a/templates/mouradaustade.html
+++ b/templates/mouradaustade.html
@@ -299,5 +299,9 @@
                     frameborder="0"></iframe>
         </div>
     </div>
+
+    <footer style="text-align: center; padding: 20px; margin-top: 40px; border-top: 1px solid #3d3d3d;">
+        <a href="/privacy-policy" style="color: #ffffff; text-decoration: none;">Politique de Confidentialité</a>
+    </footer>
 </body>
 </html>
