--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -4,7 +4,7 @@
     <title>Politique de Confidentialité - Mourad Au Stade</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2259696635983622"
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9547009217122053"
      crossorigin="anonymous"></script>
     <style>
         body {
@@ -73,7 +73,7 @@
 
     <div class="section">
         <h2>7. Contact</h2>
-        <p>Pour toute question concernant cette politique de confidentialité, vous pouvez nous contacter à : [votre email]</p>
+        <p>Pour toute question concernant cette politique de confidentialité, vous pouvez nous contacter à : mouradmachisoqk@gmail.com</p>
     </div>
 
     <div class="section">
