--- a/templates/mouradaustade.html
+++ b/templates/mouradaustade.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mourad Au Stade - Matches en Direct</title>
+    <title> مراد فالسطاد - الماتشات ديريكت </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Regardez les matchs de football en direct sur Mourad Au Stade">
